fixed a spacing issue on the form page

--- a/client/src/components/FormWrap/style.css
+++ b/client/src/components/FormWrap/style.css
@@ -8,6 +8,11 @@
    
 }
 
+.quoteRequestSize {
+    margin-top: 80px;
+    margin-bottom: 100px;
+}
+
 .quote-size {
     font-size: 25px;
 }
